--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+:root {
+  font-family: 'Inter', sans-serif;
+  p-select{
+    width:300px;
+  }
+}
+.center-div{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
